--- a/style.css
+++ b/style.css
@@ -69,3 +69,20 @@ input{
     border-radius: 4px;
     cursor: pointer;
 }
+
+.active.tip{
+    color: hsl(183, 100%, 15%);
+    background-color: hsl(172, 67%, 45%);
+    font-weight: bolder;
+}
+.people.input{
+    background-image: url("images/icon-person.svg");
+    margin-bottom: 2.4rem;
+}
+
+.result{
+    background-color: hsl(183, 100%, 15%);
+    color: white;
+    padding: 39px 21px;
+    border-radius: 12px;
+}
