--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ input{
 
 }
 
-.bill.input{
+.bill-input{
     background-image: url("images/icon-dollar.svg");
     margin-bottom: 36px;
 }
@@ -115,4 +115,19 @@ input{
     padding: 9px 0 9px 0;
     border-radius: 5px;
     cursor: pointer;
+}
+
+#tip-custom input{
+    box-sizing: border-box;
+    width: 100px;
+}
+
+.peoplelabel{
+    justify-content: space-between;
+
+}
+
+.error{
+    color: red;
+    
 }
