--- a/style.css
+++ b/style.css
@@ -1,64 +1,72 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-body{
+
+body {
     height: 100vh;
     width: 100%;
     background-color: hsl(185, 41%, 84%);
     font-family: "Space Mono", monospace;
-}
-.logo{
-    text-align: center;
-    margin-top: 1.7rem;
-    margin-bottom: 2.3rem;
-}
-
-.tip-calculator{
-    background-color: white;
     display: flex;
     flex-direction: column;
-    padding: 2rem;
-    border-radius: 1.4rem 1.4rem 0 0;
+    align-items: center;
+    justify-content: center;
 }
 
-label{
+.logo {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.tip-calculator {
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap; /* Evita superposiciones en pantallas pequeñas */
+    justify-content: space-between;
+    padding: 2rem;
+    border-radius: 1.4rem;
+    max-width: 700px;
+}
+
+label {
     color: hsl(186, 14%, 43%);
-    font-family: 700;
+    font-weight: 700;
     margin-bottom: 0.3rem;
 }
 
-input{
+input {
     border: none;
     outline: none;
-    padding: 5px;
-    padding-right: 18px;
-    background-position: 17px 15px;
-    background-repeat: no-repeat;
+    padding: 10px;
     background-color: hsl(189, 41%, 97%);
     text-align: right;
     font-size: 24px;
     color: hsl(183, 100%, 15%);
     font-weight: bolder;
     font-family: "Space Mono", monospace;
-
+    width: 100%;
+    border-radius: 5px;
 }
 
-.bill-input{
+.bill-input {
     background-image: url("images/icon-dollar.svg");
+    background-position: 15px center;
+    background-repeat: no-repeat;
+    padding-left: 40px;
     margin-bottom: 36px;
 }
 
-.tip{
+.tip {
     margin-top: 0.7rem;
     display: grid;
-    grid-template-columns: 114px 114px;
-    row-gap: 2rem;
-    column-gap: 18px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
     margin-bottom: 2rem;
 }
 
-.tips{
+.tips {
     background-color: hsl(183, 100%, 15%);
     color: white;
     height: 48px;
@@ -70,122 +78,111 @@ input{
     cursor: pointer;
 }
 
-.active.tip{
+.active-tip {
     color: hsl(183, 100%, 15%);
     background-color: hsl(172, 67%, 45%);
     font-weight: bolder;
 }
-.people.input{
+
+.people-input {
     background-image: url("images/icon-person.svg");
+    background-position: 15px center;
+    background-repeat: no-repeat;
+    padding-left: 40px;
     margin-bottom: 2.4rem;
 }
 
-.result{
+.result {
     background-color: hsl(183, 100%, 15%);
     color: white;
-    padding: 39px 21px;
+    padding: 30px;
     border-radius: 12px;
+    flex: 1;
+    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
-.tip.amount,
-.total{
+
+.tip-amount, .total {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
     margin-bottom: 1.7rem;
-
 }
 
-.person{
+.person {
     font-size: 12px;
-    color: hsl(184, 14px, 56px);
+    color: hsl(184, 14%, 56%);
     font-weight: 700;
 }
-.amount{
+
+.amount {
     font-size: 28px;
     color: hsl(172, 67%, 45%);
     font-weight: 700;
+    text-align: right;
 }
 
-.reset{
+.reset {
+    width: 100%;
     text-align: center;
     font-size: 20px;
     font-weight: 700;
     color: hsl(183, 100%, 15%);
     background-color: hsl(172, 67%, 45%);
-    padding: 9px 0 9px 0;
+    padding: 12px;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: auto;
 }
 
-#tip-custom input{
+#tip-custom input {
     box-sizing: border-box;
     width: 100px;
 }
 
-.peoplelabel{
+.peoplelabel {
+    display: flex;
     justify-content: space-between;
-
+    align-items: center;
 }
 
-.error{
+.error {
     color: red;
     display: none;
 }
 
+/* Media Query para Desktop */
 @media only screen and (min-width: 1000px) {
-    body{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-    input{
-        width: 415px;
-        padding: 9px;
-        background-position: 17px 18px;
-    }
     .tip-calculator {
-        width: 998px;
-        flex-direction: row;
-        border-radius: 1.4rem;
-        padding: 2.3rem;
-        height: 479px;
-    }
-    .portOne {
-        margin-top: 1rem;
-        margin-left: 1.2rem;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        align-items: center;
+        max-width: 800px;
+        padding: 40px;
+        border-radius: 15px;
     }
-    .bill-input {
-        margin-bottom: 3.4rem;
+
+    .partOne {
+        flex: 1;
+        margin-right: 40px;
     }
+
     .tip {
-        display: grid;
-        grid-template-columns: 135px 135px 135px; /* Corrección aquí */
+        grid-template-columns: repeat(3, 1fr);
         row-gap: 1.2rem;
         column-gap: 17px;
-        margin-bottom: 3.2rem;
-    }
-    .tips {
-        height: 59px;
     }
 
-    .result{
-        margin-left:auto;
-        width: 400px;
-        display: flex;
-        flex-direction:column;
-        align-content:space-between;
-        padding: 48px 38px;
-
+    .result {
+        flex: 1;
+        padding: 40px;
     }
-    .amount{
-        font-size: 55px;
 
-    }
-    .reset{
-        padding: 13px 0 13px 0;
-        margin-top: auto;
+    .amount {
+        font-size: 2rem;
     }
 }
